--- a/每天日记/11月6日做啥了.md
+++ b/每天日记/11月6日做啥了.md
@@ -6,8 +6,8 @@
 | :--------------------------------------- | :---------------: |
 | 从参考路线复制了这个表格                 |         ✔️         |
 | 解决github进不去问题                     |         ✔️         |
-| 完成u校园上的作业                        |                   |
-| 完成计算机科学导论作业（写小论文）一部分 |                   |
+| 完成u校园上的作业                        |         ❌         |
+| 完成计算机科学导论作业（写小论文）一部分 |         ❌         |
 
 1.关于解决github这个问题，我一直都在弄，去百度，去csdn、b站、知乎等网站都去搜了，然后很多都是，去改host那个文件，去在后面加IP地址和网址，刚开始照着做，也的确暂时解决了问题，但一下子又不行了，甚至重复几次之后等于没做，就很烦，等着那个圈转来装去，心情变得暴躁，觉得一天的时间又一下子没了。
 
@@ -17,4 +17,12 @@
 >
 > - 1.用户"你这是在干什么"回复 *（https://github.com/luozheao/setHost写了个脚本, 点击里面的cmd文件, 就可以自动获取ip地址,并把ip地址更新到host文件中）*，看着挺好的，我还没用，但我下了，我认为是有点作用的。  
 > - 2.为什么没有用第一个，因为第二个更简单，主要的是当时我进不去github，那位亲爱的用户甩个github的链接，鬼知道他怎么想的。第二个也是评论里找的，他说看b战的[一个视频](https://www.bilibili.com/video/BV1LZ4y1N7KQ "如何将你的github提速500倍 高达10M/S解决Git Clone慢等问题"),用planB，然后的然后，我就照着视频做了，就是使用[pigcha](pigcha.com "pigcha下载地址")这个软件，不过里面还是要收钱的（终究是违背了找免费的初心），但他也有送的流量，我看还是挺多的，我觉得他能让我短时间不用再担心着这个问题，主要是很方便，强推，so，github的问题暂时解决。美滋滋，
+
+2.从参考路线中发现了类似这样的学习日记，与挺不错的表格，将其copy过来疗。
+
+3.今天下午两个小时有车协的技修课，就去了，不会修车你还骑车呢，就觉得很有成就感，自己的车自己修。
+
+4.下午晚上为室友的生日，出去聚餐辽，然后晚上为lol决赛，dk对EDG，其实也不怎么玩（英雄都认不全），但很有气氛，也参与进去了，看了一两场，挺好的，明天报告一下结果。
+
+今天的结果：就很水，很水，啊，我好fw。明天加油。
 
