补充11.7的日记

--- a/每天日记/11月6日做啥了.md
+++ b/每天日记/11月6日做啥了.md
@@ -1,4 +1,4 @@
-今日进度：
+## 今日进度：
 
 
 
@@ -8,6 +8,12 @@
 | 解决github进不去问题                     |         ✔️         |
 | 完成u校园上的作业                        |         ❌         |
 | 完成计算机科学导论作业（写小论文）一部分 |         ❌         |
+
+
+
+
+
+### 其他的一些事
 
 1.关于解决github这个问题，我一直都在弄，去百度，去csdn、b站、知乎等网站都去搜了，然后很多都是，去改host那个文件，去在后面加IP地址和网址，刚开始照着做，也的确暂时解决了问题，但一下子又不行了，甚至重复几次之后等于没做，就很烦，等着那个圈转来装去，心情变得暴躁，觉得一天的时间又一下子没了。
 
