--- a/每天日记/11月5日做啥了.md
+++ b/每天日记/11月5日做啥了.md
@@ -1,4 +1,4 @@
-# 11.5我是一条fish
+# 11.5之我是一条fish
 
 1.今天下午github网站突然进不去了，弄了半天也没弄好，想着等一下吧，过一会儿他就自己好了。
 
@@ -9,5 +9,4 @@
 #### 总结
 
 挺摸鱼的一天，其实下午还有一个班会，开会在教室，挺远的，时间又少一大半；我中午睡觉，睡到3点多才起来，有点心里不舒服 *（但其实我是我们中午觉最早起来的呢）*，就觉得今天很摸鱼吧，但还好，会焦虑，但也会怕焦虑掉头发*（我对我头发已经无语了，有本事他不掉）*，保持开心⑧，热情洋溢，积极进取。*（“野蛮体魄，精神文明，热情洋溢，积极进取，责任野行。”昨天车协提到的20字方针，顺带记忆一下，嘿嘿。)*
-
 
